tests/NormalTests/paczka1/fuzzy1/44056484.err
Error in line 6: d1SpPRE A841 75,8
Error in line 12: IjMv A963 204,2
Error in line 13: IjMv S446 87,9
Error in line 7: d1SpPRE A963 39,4
Error in line 19: hj1NHbpTW A841 -4,7
Error in line 22: A841 A841 94,9
Error in line 31: A841 A963 4,0
